<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>warenav_bringup</n>
  <version>1.0.0</version>
  <description>
    WarehouseNav AMR — Bringup Package
    All launch files for simulation and hardware.
    Pattern: bhavikmk/warehousebot spawner package.
    MAHE Mobility Challenge 2026
  </description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>warenav_description</depend>
  <depend>warenav_nav</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
